--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_messaging: ^10.0.0
   overlay_support: ^1.2.1
   pull_to_refresh: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
