--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   overlay_support: ^1.2.1
   pull_to_refresh: ^2.0.0
   intl: ^0.17.0
+  flutter_local_notifications: ^8.1.1+2
 
 dev_dependencies:
   flutter_test:
